--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.12",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
@@ -33,19 +34,19 @@
     "cache-manager": "^6.4.1",
     "cheerio": "1.0.0-rc.12",
     "connect-redis": "^8.0.2",
-    "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
-    "express-session": "^1.18.1",
     "geoip-lite": "^1.4.10",
     "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.6.0",
     "keyv": "^5.3.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "ms": "^2.1.3",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
@@ -53,7 +54,8 @@
     "rxjs": "^7.8.2",
     "sequelize": "^6.37.6",
     "sequelize-typescript": "^2.1.6",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.10.1",
@@ -64,16 +66,16 @@
     "@swc/core": "^1.11.11",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
-    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
-    "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.10",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.13.10",
     "@types/passport": "^1.0.17",
     "@types/passport-github2": "^1.2.9",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
     "@types/validator": "^13.12.2",
