--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint . --fix",
-    "up": "taze minor -I",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:cov": "vitest run --coverage",
-    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false"
+    "up": "taze minor -I"
   },
   "dependencies": {
     "@keyv/redis": "^4.3.2",
@@ -72,6 +68,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/geoip-lite": "^1.4.4",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.10",
     "@types/ms": "^2.1.0",
@@ -82,18 +79,16 @@
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.20",
     "@types/validator": "^13.12.2",
-    "@vitest/coverage-v8": "^3.0.9",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "taze": "^19.0.2",
+    "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2",
-    "unplugin-swc": "^1.5.1",
-    "vitest": "^3.0.9",
     "webpack": "^5.98.0"
   },
   "pnpm": {
