--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.8.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
@@ -82,6 +83,7 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/passport-oauth2": "^1.4.17",
     "@types/sequelize": "^4.28.20",
     "@types/validator": "^13.12.2",
     "class-transformer": "0.5.1",
