--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nestjs/platform-express": "^11.0.12",
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^11.1.0",
-    "@zvonimirsun/iszy-common": "^1.0.10",
+    "@zvonimirsun/iszy-common": "^1.0.11",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
@@ -61,6 +61,7 @@
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.1",
+    "ua-parser-js": "^2.0.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
