--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "geoip-lite": "^1.4.10",
     "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.6.0",
+    "js-yaml": "^4.1.0",
     "keyv": "^5.3.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
@@ -77,6 +78,7 @@
     "@types/express-session": "^1.18.1",
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.10",
     "@types/ms": "^2.1.0",
