--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iszy-api",
   "version": "1.0.1",
   "private": true,
-  "packageManager": "pnpm@10.28.1",
+  "packageManager": "pnpm@10.30.2",
   "description": "",
   "author": "ZvonimirSun",
   "license": "GPL-3.0-or-later",
@@ -41,7 +41,7 @@
     "dayjs": "^1.11.19",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
-    "geoip-lite": "^1.4.10",
+    "geoip-lite": "^2.0.0",
     "https-proxy-agent": "^7.0.6",
     "ioredis": "^5.9.3",
     "js-yaml": "^4.1.1",
@@ -66,12 +66,12 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^7.2.0",
+    "@antfu/eslint-config": "^7.5.0",
     "@nestjs/cli": "^11.0.16",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.14",
-    "@swc/cli": "^0.8.0",
-    "@swc/core": "^1.15.11",
+    "@swc/cli": "^0.7.10",
+    "@swc/core": "^1.15.13",
     "@types/bcrypt": "^6.0.0",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.6",
@@ -79,10 +79,10 @@
     "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.17.23",
+    "@types/lodash": "^4.17.24",
     "@types/mockjs": "^1.0.10",
     "@types/ms": "^2.1.0",
-    "@types/node": "^25.2.1",
+    "@types/node": "^25.3.0",
     "@types/passport": "^1.0.17",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-jwt": "^4.0.1",
@@ -91,7 +91,7 @@
     "@types/validator": "^13.15.10",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.2",
     "globals": "^17.3.0",
     "taze": "^19.9.2",
     "ts-jest": "^29.4.6",
@@ -102,6 +102,10 @@
     "webpack": "^5.105.2"
   },
   "pnpm": {
+    "overrides": {
+      "eslint": "^10.0.2",
+      "jsonc-eslint-parser": "^3.1.0"
+    },
     "onlyBuiltDependencies": [
       "@alicloud/openapi-core",
       "@nestjs/core",
