--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "cache-manager": "^7.2.8",
     "cheerio": "1.0.0",
     "dayjs": "^1.11.19",
+    "destr": "^2.0.5",
     "express": "^5.2.1",
     "geoip-lite": "^2.0.0",
     "https-proxy-agent": "^7.0.6",
-    "ioredis": "^5.9.3",
     "js-yaml": "^4.1.1",
     "keyv": "^5.6.0",
     "lodash": "^4.17.23",
@@ -57,6 +57,7 @@
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.1.3",
     "rxjs": "^7.8.2",
+    "scule": "^1.3.0",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.1",
